--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,12 @@
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: system-ui, -apple-system;
   background-color: #046087;
+}
+
+#dealtCards {
+  gap: 300px; /* Separación entre cartas */
 }
 
 .card {
@@ -20,9 +24,14 @@ body {
 }
 
 .card-dealt {
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.4s ease, transform 0.4s ease;
+  position: relative;
+  width: 16rem;
+  min-height: 20rem;
+  transition: all 0.3s ease;
+}
+
+.card-dealt.active {
+  z-index: 20 !important;
 }
 
 .card-dealt.show {
@@ -37,4 +46,6 @@ body {
 
 .card-dealt:hover {
   transform: scale(1.05);
+  transition: transform 0.3s ease;
+  z-index: 10;
 }
